# mcp-file-server

./: .gitignore  LANGCHAIN_INTEGRATION.md  LLM_INTEGRATION.md  N8N_INTEGRATION.md  N8N_JSON_TROUBLESHOOTING.md  OPENAI_INTEGRATION.md  README.md  claude_config.json  example_openai_usage.py  langchain_example.py  langchain_integration.py  langchain_simple.py  llm_example.py  main.py  n8n_server.py  n8n_workflow_fixed_json.json  n8n_workflow_simple.json  n8n_workflow_template.json  openai_integration.py  pyproject.toml  run_server.sh  run_server_debug.sh  run_server_local.sh  simple_test.py  test_langchain_simple.py  test_main.py  test_n8n_api.py  test_openai_functions.py
