[project]
name = "mcp-file-server"
version = "0.1.0"
description = "MCP server for file system operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "mcp>=1.9.3",
    "mcp-use>=1.3.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]

[project.scripts]
mcp-file-server = "main:main"

[project.optional-dependencies]
langchain = [
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.21",
]

[dependency-groups]
langchain = [
    "langchain>=0.3.25",
]
